2007-04-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-mode): `last-input-event' is nil when
	XEmacs is started.

2007-03-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-register-file-name-handler)
	(tramp-register-completion-file-name-handler): New defsubst,
	derived from `tramp-register-file-name-handlers'.  The split is
	necessary because Tramp's file name handlers must be registered at
	different startup places.

2007-03-31  Joachim Schrod  <jschrod@acm.org>  (tiny change)

	* tramp.el (tramp-completion-mode): `last-input-event' may have no
	character approximation.

2007-03-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-make-auto-save-file-name): Apply
	`tramp-temporary-file-directory' for compatibility reasons.

2007-03-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-insert-directory): Check (featurep 'ls-lisp).

2007-03-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-make-temp-file): New parameter FILENAME.  Append
	its extension to the resulting temporary file name.
	(tramp-handle-file-local-copy, tramp-handle-write-region): Apply
	it.

	* tramp-smb.el (tramp-smb-handle-file-local-copy)
	(tramp-smb-handle-write-region): Apply it.

2007-02-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-get-ls-command, tramp-get-file-exists-command)
	(tramp-get-remote-ln): Handle error case.  Reported by Chris Moore
	<dooglus@gmail.com>.

2007-01-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-do-copy-or-rename-file-out-of-band): Set
	default-directory to a sane value when calling start-process.

2007-01-21  Glenn Morris  <rgm@gnu.org>

	* tramp.el (tramp-perl-encode, tramp-perl-decode):
	Update copyrights.

2007-01-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (with-parsed-tramp-file-name): Protect debug spec
	during compilation.

2007-01-11  Michael Albinus  <michael.albinus@gmx.de>
